# apklis-downloader

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: pypi-publish.yml
api-reference/api/: index.html
api-reference/downloader/: index.html
api-reference/utils/: index.html
apklis/: __init__.py  api.py  downloader.py  utils.py
docs/: index.md
docs/api-reference/: api.md  downloader.md  utils.md
docs/getting-started/: installation.md  quickstart.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_apklis.py
